--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <main class="wrap">
     <header class="topbar">
-      <h1>🧮 TANASHI Calculator</h1>
+      <h1>🧮 SAT Calculator</h1>
       <button id="themeToggle" title="Смени тема">🌓</button>
     </header>
 
